--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,16 @@ dependencies {
     compile 'org.springframework:spring-jdbc:4.3.5.RELEASE'
     compile 'org.springframework:spring-core:4.3.5.RELEASE'
     compile 'org.springframework:spring-web:4.3.5.RELEASE'
-    testCompile 'org.springframework:spring-test:4.3.5.RELEASE'
-    testCompile 'org.testng:testng:6.3.1'
+    compile 'org.springframework:spring-test:4.3.5.RELEASE'
     compile 'org.glassfish.jersey.core:jersey-client:2.22.2'
     compile 'org.glassfish.jersey.core:jersey-server:2.22.2'
     compile 'org.glassfish.jersey.ext:jersey-spring3:2.22.2'
     compile 'log4j:apache-log4j-extras:1.2.17'
+    testCompile 'org.testng:testng:6.3.1'
+}
+
+test {
+	useTestNG {
+        suites 'src/test/resources/rush-testng.xml'
+    } 
 }
