--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>Rush</display-name>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:simple-context.xml</param-value>
+    <param-value>classpath:rush-context.xml</param-value>
   </context-param>
   <context-param>
     <param-name>log4jConfigLocation</param-name>
