--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,29 @@
+buildscript {
+  repositories {
+  	jcenter()
+    mavenCentral()
+  }
+
+  dependencies {
+    classpath 'com.google.cloud.tools:appengine-gradle-plugin:+'
+  }
+}
+
 apply plugin: 'java'
 apply plugin: 'war'
+apply plugin: 'com.google.cloud.tools.appengine'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+group = 'com.rush.appengine'
+version = '1.0'
+
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 repositories {
+	maven {
+    	url 'https://maven-central.storage.googleapis.com'
+    }
+    jcenter()  
     mavenCentral()
 }
 
@@ -19,7 +38,21 @@ dependencies {
     compile 'org.glassfish.jersey.ext:jersey-spring3:2.22.2'
     compile 'log4j:apache-log4j-extras:1.2.17'
     testCompile 'org.testng:testng:6.3.1'
+    providedCompile group: 'javax.servlet', name: 'servlet-api', version:'2.5'
+  	compile 'com.google.appengine:appengine:+
 }
+
+appengine {
+  run {
+    port = 8080
+  }
+
+  deploy {
+    stopPreviousVersion = true
+    promote = true
+  }
+}
+
 
 test {
 	useTestNG {
