--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     compile 'log4j:apache-log4j-extras:1.2.17'
     testCompile 'org.testng:testng:6.3.1'
     providedCompile group: 'javax.servlet', name: 'servlet-api', version:'2.5'
-  	compile 'com.google.appengine:appengine:+
+  	compile 'com.google.appengine:appengine:+'
+  	compile 'mysql:mysql-connector-java:5.1.40'
+  	compile 'com.google.cloud.sql:mysql-socket-factory:1.0.2'
 }
 
 appengine {
