--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'com.google.cloud.tools.appengine'
 
-group = 'com.rush.appengine'
-version = '1.0'
+group = 'boomerang'
+version = '2.0'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -38,10 +38,9 @@ dependencies {
     compile 'org.glassfish.jersey.ext:jersey-spring3:2.22.2'
     compile 'log4j:apache-log4j-extras:1.2.17'
     testCompile 'org.testng:testng:6.3.1'
-    providedCompile group: 'javax.servlet', name: 'servlet-api', version:'2.5'
   	compile 'com.google.appengine:appengine:+'
-  	compile 'mysql:mysql-connector-java:5.1.40'
-  	compile 'com.google.cloud.sql:mysql-socket-factory:1.0.2'
+  	compile 'com.google.appengine:appengine-api-1.0-sdk:+'
+  	compile 'com.google.cloud:google-cloud-datastore:0.8.0-beta'
 }
 
 appengine {
