--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,10 @@
     		<param-name>jersey.config.server.provider.scanning.recursive</param-name>
     		<param-value>false</param-value>
 		</init-param>
+		<init-param>
+    		<param-name>com.sun.jersey.config.feature.DisableWADL</param-name>
+    		<param-value>true</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
