--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   <servlet>
-	<servlet-name>Rush</servlet-name>
+	<servlet-name>boomerang</servlet-name>
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 	      <param-name>jersey.config.server.provider.packages</param-name>
@@ -30,7 +30,7 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>Rush</servlet-name>
+		<servlet-name>boomerang</servlet-name>
 		<url-pattern>/api/*</url-pattern>
   </servlet-mapping>
   
