--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'com.google.cloud.tools.appengine'
 
+war {
+	archiveName 'boomerang.war'
+}
+
 group = 'boomerang'
 version = '1.4'
 
