--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>Rush</display-name>
+  <display-name>boomerang</display-name>
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:boomerang-context.xml</param-value>
@@ -13,7 +13,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 	      <param-name>jersey.config.server.provider.packages</param-name>
-    	  <param-value>com.boomerang.core</param-value>
+    	  <param-value>com.boomerang.os.service</param-value>
 	    </init-param>
 	    <init-param>
     		<param-name>jersey.config.server.provider.scanning.recursive</param-name>
