--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,3 +3,10 @@ boomerang.app.profile=test
 
 # Test Constants #
 boomerang.test.ping=OK
+
+# Firebase config
+boomerang.firebase.apikey=AIzaSyDzS133LwNBIszgiDKJ1KTH5TXAoltodwA
+boomerang.firebase.authdomain=boomerang-686.firebaseapp.com
+boomerang.firebase.databaseurl=https://boomerang-686.firebaseio.com
+boomerang.firebase.storagebucket=boomerang-686.appspot.com
+boomerang.firebase.messagingsenderid=1051306301228
