--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 boomerang.app.version=0.3
 boomerang.app.profile=main
 boomerang.app.ping=OK
+
+# Firebase config
+boomerang.firebase.apikey=AIzaSyDzS133LwNBIszgiDKJ1KTH5TXAoltodwA
+boomerang.firebase.authdomain=boomerang-686.firebaseapp.com
+boomerang.firebase.databaseurl=https://boomerang-686.firebaseio.com
+boomerang.firebase.storagebucket=boomerang-686.appspot.com
+boomerang.firebase.messagingsenderid=1051306301228
