--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ boomerang.firebase.authdomain=boomerang-686.firebaseapp.com
 boomerang.firebase.databaseurl=https://boomerang-686.firebaseio.com
 boomerang.firebase.storagebucket=boomerang-686.appspot.com
 boomerang.firebase.messagingsenderid=1051306301228
+
+# App links
+boomerang.app.facebook=http://www.facebook.com
