server-side firebase integration

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,3 +10,7 @@ boomerang.firebase.authdomain=boomerang-686.firebaseapp.com
 boomerang.firebase.databaseurl=https://boomerang-686.firebaseio.com
 boomerang.firebase.storagebucket=boomerang-686.appspot.com
 boomerang.firebase.messagingsenderid=1051306301228
+boomerang.firebase.keyname=boomerang-686-firebase-adminsdk-k4c0t-54a26f63a9.json
+
+# App links
+boomerang.app.bing=https://www.bing.com
