--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'org.glassfish.jersey.ext:jersey-spring3:2.22.2'
     testCompile 'org.testng:testng:6.3.1'
   	compile 'com.google.appengine:appengine:+'
+  	compile 'com.google.firebase:firebase-admin:4.1.0'
   	compile 'com.google.code.gson:gson:2.2.4'
 }
 
