datasource config + DL4J basics

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,16 +1,14 @@
-boomerang.app.version=0.3
-boomerang.app.profile=test
-
-# Test Constants #
-boomerang.test.ping=OK
-
-# Firebase config
-boomerang.firebase.apikey=AIzaSyDzS133LwNBIszgiDKJ1KTH5TXAoltodwA
-boomerang.firebase.authdomain=boomerang-686.firebaseapp.com
-boomerang.firebase.databaseurl=https://boomerang-686.firebaseio.com
-boomerang.firebase.storagebucket=boomerang-686.appspot.com
-boomerang.firebase.messagingsenderid=1051306301228
-boomerang.firebase.keyname=boomerang-686-firebase-adminsdk-k4c0t-54a26f63a9.json
-
-# App links
-boomerang.app.bing=https://www.bing.com
+# test
+boomerang.app.ping=OK
+boomerang.google.link=https://www.google.com/finance/historical?output=csv&q=
+boomerang.mind.inputcolumns=6
+boomerang.mind.batch=31
+boomerang.mind.learningrate=0.1
+boomerang.mind.seed=17
+boomerang.mind.rmsdecay=0.95
+boomerang.mind.l2=0.001
+boomerang.mind.lstmnodes=50
+boomerang.mind.tbptt=7
+boomerang.mind.outputs=366
+boomerang.mind.score=14
+boomerang.mind.epochs=10
