--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,15 @@ dependencies {
     compile 'org.glassfish.jersey.core:jersey-client:2.22.2'
     compile 'org.glassfish.jersey.core:jersey-server:2.22.2'
     compile 'org.glassfish.jersey.ext:jersey-spring3:2.22.2'
-    testCompile 'org.testng:testng:6.3.1'
   	compile 'com.google.appengine:appengine:+'
   	compile 'com.google.firebase:firebase-admin:4.1.0'
   	compile 'com.google.code.gson:gson:2.2.4'
+  	compile 'org.deeplearning4j:deeplearning4j-core:0.7.2'
+  	compile 'org.datavec:datavec-api:0.7.2'
+  	compile 'org.nd4j:nd4j-native-platform:0.7.2'
+  	compile 'org.bytedeco:javacpp:1.3'
+  	compile 'org.slf4j:slf4j-simple:1.7.21'
+  	testCompile 'org.testng:testng:6.3.1'
 }
 
 appengine {
