Recurrent neural net is intelligible

--- a/build.gradle
+++ b/build.gradle
@@ -67,4 +67,5 @@ test {
 	useTestNG {
         suites 'src/test/resources/boomerang-testng.xml'
     } 
+    testLogging.showStandardStreams = true
 }
