--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 boomerang.app.ping=OK
-boomerang.app.ping=OK
+boomerang.test.symbol=SHLD
 boomerang.google.link=https://www.google.com/finance/historical?output=csv&q=
 boomerang.mind.inputcolumns=1
 boomerang.mind.outputs=1
-boomerang.mind.batch=31
-boomerang.mind.learningrate=0.02
-boomerang.mind.seed=17
+boomerang.mind.batch=20
+boomerang.mind.learningrate=0.01
+boomerang.mind.seed=29
 boomerang.mind.rmsdecay=0.95
-boomerang.mind.l2=0.01
-boomerang.mind.lstmnodes=10
-boomerang.mind.tbptt=14
+boomerang.mind.l2=0.001
+boomerang.mind.lstmnodes=50
+boomerang.mind.tbptt=40
 boomerang.mind.timeseries=366
-boomerang.mind.score=25
-boomerang.mind.epochs=5
-boomerang.mind.activation=TANH
+boomerang.mind.score=40
+boomerang.mind.epochs=15
+boomerang.mind.activation=RATIONALTANH
+oomerang.mind.weightinit=RELU
 boomerang.mind.loss=MEAN_SQUARED_LOGARITHMIC_ERROR
