--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,18 +1,19 @@
 # test
 boomerang.app.ping=OK
-boomerang.test.symbol=AMZN
+boomerang.test.symbol=AAPL
 boomerang.google.link=https://www.google.com/finance/historical?output=csv&q=
 boomerang.mind.inputcolumns=1
 boomerang.mind.outputs=1
 boomerang.mind.batch=20
-boomerang.mind.learningrate=0.001
-boomerang.mind.seed=17
-boomerang.mind.rmsdecay=0.50
+boomerang.mind.learningrate=0.01
+boomerang.mind.seed=29
+boomerang.mind.rmsdecay=0.95
 boomerang.mind.l2=0.001
-boomerang.mind.lstmnodes=2
-boomerang.mind.tbptt=8
+boomerang.mind.lstmnodes=50
+boomerang.mind.tbptt=40
 boomerang.mind.timeseries=366
-boomerang.mind.score=25
-boomerang.mind.epochs=7
+boomerang.mind.score=40
+boomerang.mind.epochs=15
 boomerang.mind.activation=TANH
-boomerang.mind.loss=XENT
+boomerang.mind.weightinit=XAVIER
+boomerang.mind.loss=RECONSTRUCTION_CROSSENTROPY
