--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 	      <param-name>jersey.config.server.provider.packages</param-name>
-    	  <param-value>com.boomerang.os.service</param-value>
+    	  <param-value>com.boomerang.rnn.service</param-value>
 	    </init-param>
 	    <init-param>
     		<param-name>jersey.config.server.provider.scanning.recursive</param-name>
