fixing server props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ boomerang.mind.timeseries=366
 boomerang.mind.score=40
 boomerang.mind.epochs=15
 boomerang.mind.activation=RATIONALTANH
-oomerang.mind.weightinit=RELU
+boomerang.mind.weightinit=RELU
 boomerang.mind.loss=MEAN_SQUARED_LOGARITHMIC_ERROR
