--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ boomerang.mind.tbptt=40
 boomerang.mind.timeseries=366
 boomerang.mind.score=40
 boomerang.mind.epochs=15
+boomerang.mind.projection=7
 boomerang.mind.activation=RATIONALTANH
 boomerang.mind.weightinit=RELU
 boomerang.mind.loss=MEAN_SQUARED_LOGARITHMIC_ERROR
