--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -14,6 +14,7 @@ boomerang.mind.tbptt=40
 boomerang.mind.timeseries=366
 boomerang.mind.score=40
 boomerang.mind.epochs=15
+boomerang.mind.projection=7
 boomerang.mind.activation=TANH
 boomerang.mind.weightinit=XAVIER
 boomerang.mind.loss=RECONSTRUCTION_CROSSENTROPY
